Bug 2 resolvido: Botão comprar posicionado abaixo do <p> e centralizado, adicionando 'display: block' e 'margin: 30px auto'.

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -38,9 +38,11 @@ div img {
 }
 
 .botao-amarelo {
+    display: block;
     background-color: #ffaf43;
     width: 250px;
     height: 40px;
+    margin: 30px auto;
     border-radius: 5px;
     font-size: 20px;
     color: white;
