--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -30,7 +30,7 @@ img {
 }
 
 div>p:first-child {
-    display: inline;
+    display: block;
 }
 
 div img {
@@ -38,11 +38,10 @@ div img {
 }
 
 .botao-amarelo {
-    display: block;
     background-color: #ffaf43;
     width: 250px;
     height: 40px;
-    margin: 30px auto;
+    margin: 0 auto;
     border-radius: 5px;
     font-size: 20px;
     color: white;
