--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -73,6 +73,11 @@ div img {
     color: white;
 }
 
+#container-de-descricao p {
+    width: 180px;
+    margin: 0 auto;
+}
+
 #container-de-descricao>ol {
     padding: 15px 0px;
 }
