--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -19,6 +19,8 @@ h2 {
 input {
     height: 20px;
     width: 500px;
+    border: none;
+    border-bottom: 1px solid black;
 }
 
 button:focus {
@@ -116,6 +118,10 @@ td button {
     height: 30px;
     border-radius: 5px;
     color: black;
+}
+
+td button:hover {
+    background-color: #d3bb52;
 }
 
 .container-do-search {
