--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 /** 
   *
   *  ESTILOS GERAIS 
@@ -7,7 +9,9 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
+
 
 h2 {
     background-color: #fe7e02;
